--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  content: 'Vue';
+  content: 'Ng';
   font: 12px/34px 'Roboto', Arial, Helvetica, sans-serif;
   text-align: center;
   color: #FFF;
