--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,10 +1,77 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Wire+One&display=swap');
+
+.app {
+  position: relative;
   text-align: center;
+  width: 100%;
+  height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
-.App-logo {
+.app-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 200% 200%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
+}
+
+h1 {
+  margin: 0;
+  font: 500 180px/200px 'Wire One', sans-serif;
+  text-transform: uppercase;
+}
+
+h2 {
+  margin: 0;
+  font: 500 80px/100px 'Wire One', sans-serif;
+  text-transform: uppercase;
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.link {
+  width: 42px;
+  height: 42px;
+  margin-top: 20px;
+}
+
+a {
+  display: block;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  transition: background-color 100ms ease-in-out;
+}
+
+a.github {
+  background-color: #252525;
+  mask-image: url("./github.svg");
+  mask-size: cover;
+  -webkit-mask-size: cover;
+}
+
+a:hover {
+  background-color: #00000045;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,19 +80,10 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+@keyframes Gradient {
+  0% {background-position: 0% 50%}
+  50% {background-position: 100% 50%}
+  100% {background-position: 0% 50%}
 }
 
 @keyframes App-logo-spin {
