--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,96 +1,121 @@
 @import url('https://fonts.googleapis.com/css2?family=Wire+One&display=swap');
 
 .app {
-  position: relative;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  min-width: 100vw;
-  min-height: 100vh;
-}
-
-.app-logo {
-  height: 40vmin;
-  pointer-events: none;
+    position: relative;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
 }
 
 .section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-  background-size: 200% 200%;
-  -webkit-animation: Gradient 15s ease infinite;
-  -moz-animation: Gradient 15s ease infinite;
-  animation: Gradient 15s ease infinite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
+
+.wrapper-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    width: 90%;
+    height: 90%;
+    border: 1px solid #ffffff;
+}
+
+h1, h2 {
+    color: #ffffff;
+    padding: 12px 20px;
+    /*background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);*/
+    /*-webkit-background-clip: text;*/
+    /*-webkit-text-fill-color: transparent;*/
+    /*background-size: 800% 800%;*/
+    /*animation: rainbow 16s ease infinite;*/
 }
 
 h1 {
-  margin: 0;
-  font: 500 180px/200px 'Wire One', sans-serif;
-  text-transform: uppercase;
+    margin: 0;
+    font: 500 111px/111px 'Wire One', sans-serif;
+    text-transform: uppercase;
 }
 
 h2 {
-  margin: 0;
-  font: 500 80px/100px 'Wire One', sans-serif;
-  text-transform: uppercase;
+    margin: 0;
+    font: 500 52px/54px 'Wire One', sans-serif;
+    text-transform: uppercase;
 }
 
 .links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .link {
-  width: 42px;
-  height: 42px;
-  margin-top: 20px;
+    width: 42px;
+    height: 42px;
+    margin-top: 20px;
+    margin-left: 40px;
+}
+
+.link:first-child {
+    margin-left: 0;
 }
 
 a {
-  display: block;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  transition: background-color 100ms ease-in-out;
+    display: block;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    transition: background-color 100ms ease-in-out;
+    text-indent: -9999px;
 }
 
 a.github {
-  background-color: #252525;
-  mask-image: url("./github.svg");
-  mask-size: cover;
-  -webkit-mask-size: cover;
+    background-color: #ffffff;
+    mask-image: url("./github.svg");
+    mask-size: cover;
+    -webkit-mask-size: cover;
+    animation: logo-spin infinite 60s linear;
+}
+
+a.telega {
+    background-color: #ffffff;
+    mask-image: url("./telega.svg");
+    mask-size: cover;
+    -webkit-mask-size: cover;
+    animation: logo-spin infinite 10s linear;
 }
 
 a:hover {
-  background-color: #00000045;
+    background-color: rgba(245, 245, 245, 0.75);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@keyframes logo-spin {
+    0% {
+        transform: rotate(0deg)
+    }
+    100% {
+        transform: rotate(360deg)
+    }
 }
 
-@keyframes Gradient {
-  0% {background-position: 0% 50%}
-  50% {background-position: 100% 50%}
-  100% {background-position: 0% 50%}
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes rainbow {
+    0% {
+        background-position: 0 50%
+    }
+    50% {
+        background-position: 100% 25%
+    }
+    100% {
+        background-position: 0 50%
+    }
 }
