--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -85,6 +85,28 @@
             }
           }
 
+          &.fish {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font: 500 110px/140px 'Wire One', sans-serif;
+            color: #ffffff;
+            span {
+              &.title {
+                letter-spacing: 67px;
+                padding-left: 67px;
+              }
+              &.subtitle  {
+                font-size: 30px;
+                line-height: 60px;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                font-family: 'Roboto';
+              }
+            }
+          }
+
           &.one {
             .center {
               display: flex;
