--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -23,6 +23,18 @@
     .wrapper-canvas {
     }
 
+    .safari-filter {
+      display: none;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backdrop-filter: blur(50px);
+      filter: blur(50px);
+      &.active {
+        display: block;
+      }
+    }
+
     .wrapper-content {
       position: absolute;
       width: 100%;
