--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -362,7 +362,7 @@
                 position: absolute;
                 top: 46px;
                 right: 40px;
-                width: 333px;
+                width: 326px;
 
                 .text {
                   font: 300 20px/28px 'Roboto', sans-serif;
@@ -370,7 +370,8 @@
                   text-align: right;
                   color: #fff;
 
-                  span {
+                  a {
+                    text-decoration: none;
                     font-weight: 500;
 
                     &.angular {
