--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -362,11 +362,11 @@
                 position: absolute;
                 top: 46px;
                 right: 40px;
-                width: 326px;
+                width: 360px;
 
                 .text {
                   font: 300 20px/28px 'Roboto', sans-serif;
-                  letter-spacing: 1px;
+                  //letter-spacing: 1px;
                   text-align: right;
                   color: #fff;
 
