--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -355,7 +355,7 @@
                 color: #ffffff;
                 border-bottom: 16px solid #fff;
                 display: inline-block;
-                align-self: baseline;
+                align-self: flex-start;
               }
 
               .about {
@@ -517,15 +517,163 @@
                 color: #ffffff;
                 border-bottom: 16px solid #fff;
                 display: inline-block;
-                align-self: baseline;
+                align-self: flex-end;
+              }
+
+              .about {
+                position: absolute;
+                top: 200px;
+                right: 40px;
+                max-width: 415px;
+                padding-left: 40px;
+
+                .text {
+                  font: 300 20px/28px 'Roboto', sans-serif;
+                  //letter-spacing: 1px;
+                  text-align: right;
+                  color: #fff;
+
+                  a {
+                    text-decoration: none;
+                    font-weight: 500;
+
+                    &.angular {
+                      color: #de0331;
+                    }
+
+                    &.react {
+                      color: #61dafb;
+                    }
+                  }
+                }
               }
 
               .works-block {
-                .work {
-                  .w-icon {
-                  }
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
 
-                  .w-title {
+                .works-titles {
+                  display: flex;
+                  justify-content: flex-end;
+                  align-items: center;
+                  flex-wrap: wrap;
+                  position: absolute;
+                  top: 280px;
+                  right: 0;
+                  width: 50%;
+                  padding: 0 40px;
+
+                  .work-title-item {
+                    cursor: pointer;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+                    margin-left: 40px;
+                    margin-top: 40px;
+
+                    .w-icon {
+                      width: 100px;
+                      height: 100px;
+                      background-color: transparent;
+                      //background-color: #1d1d1e;
+
+                      &.quadratix {
+                        background-image: url('./logo-quadratix.png');
+                        background-repeat: no-repeat;
+                        background-position: 50%;
+                        background-size: 90%;
+                      }
+
+                      &.pixcollector {
+                        background-image: url('./logo-pixcollector.svg');
+                        background-repeat: no-repeat;
+                        background-position: 50%;
+                        background-size: 90%;
+                      }
+
+                      &.traktrain {
+                        background-image: url('./logo-traktrain.png');
+                        background-repeat: no-repeat;
+                        background-position: 50%;
+                        background-size: 90%;
+                      }
+                    }
+
+                    .w-title {
+                      width: 100%;
+                      height: 40px;
+                      margin-top: 10px;
+                      font: 300 14px/28px 'Roboto', sans-serif;
+                      text-transform: capitalize;
+                      text-align: center;
+                      color: #fff;
+                    }
+
+                    &:hover, &.active {
+                      .w-icon {
+                      }
+
+                      .w-title {
+                        font-weight: 500;
+                        border-bottom: 2px solid #FFFFFF;
+                        //border-bottom: 2px solid #E91E63;
+                      }
+                    }
+                  }
+                }
+
+                .works-content {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  width: 50%;
+
+                  .work-content-item {
+                    width: 100%;
+                    height: calc(100vh - 120px);
+                    padding: 40px;
+
+                    .wrapper {
+                      overflow: hidden;
+                      position: relative;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      width: 100%;
+                      height: 100%;
+
+                      .opener {
+                        overflow: hidden;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 100%;
+                        height: 100%;
+                        background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+                        background-size: 400% 400%;
+                        animation: Gradient 15s ease infinite;
+                        transform: scale(0);
+                        transition: transform 100ms ease-in-out;
+
+                        &.opened {
+                          transform: scale(1);
+                        }
+
+                        iframe {
+
+                        }
+                      }
+                    }
                   }
                 }
               }
@@ -775,5 +923,17 @@
         }
       }
     }
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
   }
 }
